# src/main/java/de/bach/recipeProvider/mongodb/model/Recipe.java
@@ -2,6 +2,8 @@ package de.bach.recipeProvider.mongodb.model;
 
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
+
+import java.net.URI;
 import java.util.List;
 
 @Document(collection = "Recipes")
@@ -12,15 +14,21 @@ public class Recipe {
 
     public String title;
 
+    public URI uri;
+
     private List<RecipeIngredient> ingredients;
+
+    private List<String> nutrients;
 
     private List<String> preparation;
 
     public Recipe() {}
 
-    public Recipe(String title, List<RecipeIngredient> ingredients, List<String> preparation) {
+    public Recipe(String title, URI uri, List<RecipeIngredient> ingredients, List<String> nutrients, List<String> preparation) {
         this.title = title;
+        this.uri = uri;
         this.ingredients = ingredients;
+        this.nutrients = nutrients;
         this.preparation = preparation;
     }
 
@@ -38,6 +46,14 @@ public class Recipe {
 
     public void setIngredients(List<RecipeIngredient> ingredients) {
         this.ingredients = ingredients;
+    }
+
+    public List<String> getNutrients() {
+        return nutrients;
+    }
+
+    public void setNutrients(List<String> nutrients) {
+        this.nutrients = nutrients;
     }
 
     public List<String> getPreparation() {
